--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<!--<link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
 	<!-- Place favicon.ico in the root directory -->
 	<link rel="stylesheet" href="/dist/bundle.css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
 <!--[if lte IE 9]>
