gh-pages initial

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<!--<link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
 	<!-- Place favicon.ico in the root directory -->
-	<link rel="stylesheet" href="/dist/bundle.css">
+	<link rel="stylesheet" href="dist/bundle.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
@@ -18,7 +18,7 @@
 <![endif]-->
 
 <div id="root"></div>
-<script src="/dist/bundle.js"></script>
+<script src="dist/bundle.js"></script>
 
 </body>
 </html>
